--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +15,41 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Final7"
         tools:targetApi="31">
+        <activity
+            android:name=".MainActivity11"
+            android:exported="false"
+            android:label="@string/title_activity_main11"
+            android:theme="@style/Theme.Final7" />
+        <activity
+            android:name=".MainActivity10"
+            android:exported="false"
+            android:label="@string/title_activity_main10"
+            android:theme="@style/Theme.Final7" />
+        <activity
+            android:name=".MainActivity9"
+            android:exported="false"
+            android:label="@string/title_activity_main9"
+            android:theme="@style/Theme.Final7" />
+        <activity
+            android:name=".MainActivity8"
+            android:exported="false"
+            android:label="@string/title_activity_main8"
+            android:theme="@style/Theme.Final7" />
+        <activity
+            android:name=".MainActivity7"
+            android:exported="false"
+            android:label="@string/title_activity_main7"
+            android:theme="@style/Theme.Final7" />
+        <activity
+            android:name=".MainActivity6"
+            android:exported="false"
+            android:label="@string/title_activity_main6"
+            android:theme="@style/Theme.Final7" />
+        <activity
+            android:name=".MainActivity5"
+            android:exported="false"
+            android:label="@string/title_activity_main5"
+            android:theme="@style/Theme.Final7" />
         <activity
             android:name=".MainActivity4"
             android:exported="false"
